# django-ninja-job-board

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
config/nginx/: default.conf.template
config/uwsgi/: uwsgi.ini
src/: db.sqlite3
src/api/: schemas.py  urls.py
src/api/v1/profiles/: schemas.py
src/api/v1/vacancies/: handlers.py  schemas.py
src/apps/profiles/: admin.py  apps.py  filters.py  models.py
src/apps/profiles/converters/: employers.py  jobseekers.py
src/apps/profiles/entities/: base.py  employers.py  jobseekers.py  profiles.py
src/apps/profiles/filters/: profiles.py
src/apps/profiles/migrations/: 0001_initial.py  0002_initial.py  (+7 more)
src/apps/profiles/models/: base.py  (+3 more)
src/apps/users/: admin.py  apps.py  entities.py  exceptions.py  models.py
src/apps/vacancies/: admin.py  apps.py  converters.py  entities.py  enums.py  filters.py  models.py  services.py
src/common/: container.py  models.py
src/common/converters/: base.py  converters.py  exceptions.py
src/common/filters/: pagination.py
src/common/models/: base.py  exeptions.py
src/common/services/: base.py  exceptions.py  notifications.py  tasks.py
src/common/tasks/: celery_tasks.py
src/common/use_cases/: base.py
src/common/utils/: cache.py  celery.py  orm.py  time.py
src/core/: asgi.py  celery.py  exceptions.py  init.py  middlewares.py  urls.py  wsgi.py
src/core/common/: models.py
src/core/settings/: base.py  local.py  prod.py
src/core/utils/: time.py
tests/api/: conftest.py  test_vacancies.py
tests/fake/services/: jobseekers.py  vacancies.py
tests/services/: conftest.py  test_common_services.py  test_vacancies.py  test_vacancy_service.py
tests/use_cases/: conftest.py  test_vacancy_use_cases.py
(+31 files in other folders)
